--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,11 @@ enum_primitive = "*"
 futures = "0.3"
 git2 = "0.13"
 log = { version = "0.4", features = ["std", "serde"] }
+mockall = "0.10.2"
 paw = "1.0"
 sqlx = { version = "0.5.5", features = [ "runtime-async-std-native-tls", "sqlite", "offline" ] }
 stderrlog = "0.5.1"
 structopt = { version = "0.3", features = ["paw"] }
+
+[dev-dependencies]
+tempfile = "3.1.0"
