--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ git2 = "0.13"
 log = { version = "0.4", features = ["std", "serde"] }
 mockall = "0.10.2"
 paw = "1.0"
+serde = "1.0.59"
+serde_json = "1.0.59"
 sqlx = { version = "0.5.5", features = [ "runtime-async-std-native-tls", "sqlite", "offline" ] }
 stderrlog = "0.5.1"
 structopt = { version = "0.3", features = ["paw"] }
