--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ async-std = { version = "1.5.0", features = [ "attributes" ] }
 async-trait = "0.1.50"
 chrono = "0.4"
 enum_primitive = "*"
+erased-serde = "0.3"
 futures = "0.3"
 git2 = "0.13"
 log = { version = "0.4", features = ["std", "serde"] }
@@ -19,6 +20,7 @@ mockall = "0.10.2"
 paw = "1.0"
 serde = "1.0.59"
 serde_json = "1.0.59"
+serde_with = "1.9.4"
 sqlx = { version = "0.5.5", features = [ "runtime-async-std-native-tls", "sqlite", "offline" ] }
 stderrlog = "0.5.1"
 structopt = { version = "0.3", features = ["paw"] }
