--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ git2 = "0.13"
 log = { version = "0.4", features = ["std", "serde"] }
 mockall = "0.10.2"
 paw = "1.0"
+pmrmodel_base = { version = "0.1", path = "pmrmodel_base" }
 serde = "1.0.59"
 serde_json = "1.0.59"
 serde_with = "1.9.4"
@@ -27,3 +28,6 @@ structopt = { version = "0.3", features = ["paw"] }
 
 [dev-dependencies]
 tempfile = "3.1.0"
+
+[workspace]
+members = [ "pmrmodel_base" ]
