--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ enum_primitive = "*"
 erased-serde = "0.3"
 futures = "0.3"
 git2 = "0.13"
+git-config = "0.9"
 log = { version = "0.4", features = ["std", "serde"] }
 mockall = "0.10.2"
 paw = "1.0"
