--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ structopt = { version = "0.3", features = ["paw"] }
 
 [dev-dependencies]
 tempfile = "3.1.0"
+textwrap-macros = "0.3.0"
 
 [workspace]
 members = [ "pmrmodel_base" ]
