--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 anyhow = "1.0"
 async-std = { version = "1.5.0", features = [ "attributes" ] }
 async-trait = "0.1.50"
+async-recursion = "1.0.0"
 chrono = "0.4"
 enum_primitive = "*"
 futures = "0.3"
