--- a/pmrrepo/Cargo.toml
+++ b/pmrrepo/Cargo.toml
@@ -19,6 +19,7 @@ pmrmodel_base = { version = "0.1", path = "../pmrmodel_base" }
 pmrmodel = { version = "0.1", path = "../" }
 serde = "1.0.59"
 serde_json = "1.0.59"
+sqlx = { version = "0.6.2", features = ["sqlite"] }
 stderrlog = "0.5.1"
 structopt = { version = "0.3", features = ["paw"] }
 
