--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ pmrmodel_base = { version = "0.1", path = "pmrmodel_base" }
 serde = "1.0.59"
 serde_json = "1.0.59"
 sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "sqlite", "offline" ] }
+textwrap-macros = "0.3.0"
 
 [dev-dependencies]
 mockall = "0.10.2"
