--- a/pmrrepo/Cargo.toml
+++ b/pmrrepo/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
-name = "pmrmodel"
+name = "pmrrepo"
 version = "0.1.0"
-authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,20 +8,21 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 async-std = { version = "1.5.0", features = [ "attributes" ] }
-async-trait = "0.1.50"
-chrono = "0.4"
-enum_primitive = "*"
+async-recursion = "1.0.0"
 futures = "0.3"
+git2 = "0.13"
+gix-config = "0.16.3"
 log = { version = "0.4", features = ["std", "serde"] }
-pmrmodel_base = { version = "0.1", path = "pmrmodel_base" }
+mockall = "0.10.2"
+paw = "1.0"
+pmrmodel_base = { version = "0.1", path = "../pmrmodel_base" }
+pmrmodel = { version = "0.1", path = "../" }
 serde = "1.0.59"
 serde_json = "1.0.59"
-sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "sqlite", "offline" ] }
+stderrlog = "0.5.1"
+structopt = { version = "0.3", features = ["paw"] }
 
 [dev-dependencies]
-mockall = "0.10.2"
+async-trait = "0.1.50"
 tempfile = "3.1.0"
 textwrap-macros = "0.3.0"
-
-[workspace]
-members = [ "pmrmodel_base", "pmrrepo" ]
