--- a/pmrapp_client/Cargo.toml
+++ b/pmrapp_client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "client"
+name = "pmrapp_client"
 version = "0.0.0"
 edition = "2021"
 authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
