--- a/pmrmodel/Cargo.toml
+++ b/pmrmodel/Cargo.toml
@@ -14,7 +14,7 @@ chrono = "0.4"
 enum_primitive = "*"
 futures = "0.3"
 log = { version = "0.4", features = ["std", "serde"] }
-pmrmodel_base = { version = "0.1", path = "../pmrmodel_base" }
+pmrmodel_base = "0.1"
 serde = "1.0.59"
 serde_json = "1.0.59"
 sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "sqlite", "offline" ] }
