--- a/pmrmodel_base/Cargo.toml
+++ b/pmrmodel_base/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 [dependencies]
 serde = "1.0.59"
 serde_json = "1.0.59"
-sqlx = { version = "0.6.2", features = [] }
+sqlx = { version = "0.6.2", features = [], optional = true }
+
+[features]
+sqlx = ["dep:sqlx"]
 
 [lib]
