--- a/pmrtqs/Cargo.toml
+++ b/pmrtqs/Cargo.toml
@@ -14,7 +14,7 @@ clap = { version = "4.2", features = [ "derive", "env" ] }
 dotenv = "0.15.0"
 futures = "0.3"
 log = { version = "0.4", features = ["std", "serde"] }
-pmrmodel_base = "0.1"
+pmrmodel_base = { version = "0.1", features = ["sqlx"] }
 pmrmodel = "0.1"
 serde = "1.0.59"
 serde_json = "1.0.59"
