--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+export HTTP_PORT=9380
+export PMR_GIT_ROOT=./repos
 export PMRTQS_DB_URL=sqlite:pmrtqs.db
+export PMRAPP_DB_URL=sqlite:pmrapp.db
 export SQLX_OFFLINE=true
