--- a/pmrmodel_base/Cargo.toml
+++ b/pmrmodel_base/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
 edition = "2021"
 
 [dependencies]
-serde = "1.0.59"
+serde = { version = "1.0.59", features = ["serde_derive"] }
 serde_json = "1.0.59"
 sqlx = { version = "0.6.2", features = [], optional = true }
 
