--- a/pmrmodel/Cargo.toml
+++ b/pmrmodel/Cargo.toml
@@ -13,6 +13,7 @@ async-trait = "0.1.50"
 chrono = "0.4"
 futures = "0.3"
 log = { version = "0.4", features = ["std", "serde"] }
+parking_lot = "0.12"
 pmrmodel_base = { version = "0.1", features = ["sqlx"] }
 serde = "1.0.59"
 serde_json = "1.0.59"
