--- a/pmrmodel/Cargo.toml
+++ b/pmrmodel/Cargo.toml
@@ -18,7 +18,7 @@ pmrmodel_base = { version = "0.1", features = ["sqlx"] }
 serde = "1.0.59"
 serde_json = "1.0.59"
 sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "sqlite", "offline" ] }
-textwrap-macros = "0.3.0"
+thiserror = "1.0"
 
 [dev-dependencies]
 mockall = "0.10.2"
