--- a/pmrrepo/Cargo.toml
+++ b/pmrrepo/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 anyhow = "1.0"
 async-std = { version = "1.5.0", features = [ "attributes" ] }
 async-recursion = "1.0.0"
-dotenv = "0.15.0"
+dotenvy = "0.15"
 futures = "0.3"
 git2 = "0.13"
 gix-config = "0.16.3"
@@ -23,6 +23,7 @@ serde_json = "1.0.59"
 sqlx = { version = "0.6.2", features = ["sqlite"] }
 stderrlog = "0.5.1"
 structopt = { version = "0.3", features = ["paw"] }
+thiserror = "1.0"
 
 [dev-dependencies]
 async-trait = "0.1.50"
