--- a/pmrapp_server/Cargo.toml
+++ b/pmrapp_server/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = "1.0"
 axum-macros = "0.3.0"
 axum = "0.6.1"
 clap = { version = "3.2", features = [ "derive", "env" ] }
-dotenv = "0.15.0"
+dotenvy = "0.15.0"
 log = { version = "0.4", features = ["std", "serde"] }
 pmrapp_client = "0.0.0"
 pmrmodel = "0.1.0"
