--- a/pmrtqs/Cargo.toml
+++ b/pmrtqs/Cargo.toml
@@ -11,7 +11,7 @@ anyhow = "1.0"
 async-std = { version = "1.5.0", features = [ "attributes" ] }
 async-recursion = "1.0.0"
 clap = { version = "4.2", features = [ "derive", "env" ] }
-dotenv = "0.15.0"
+dotenvy = "0.15.0"
 futures = "0.3"
 log = { version = "0.4", features = ["std", "serde"] }
 pmrmodel_base = { version = "0.1", features = ["sqlx"] }
