--- a/pmrrepo/Cargo.toml
+++ b/pmrrepo/Cargo.toml
@@ -12,7 +12,7 @@ async-recursion = "1.0.0"
 dotenvy = "0.15"
 futures = "0.3"
 git2 = "0.13"
-gix-config = "0.16.3"
+gix = "^0.46"
 log = { version = "0.4", features = ["std", "serde"] }
 mime_guess = "2.0.4"
 paw = "1.0"
