--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,25 @@
 [workspace]
-members = ["pmrapp_client", "pmrapp_server", "pmrmodel_base", "pmrmodel", "pmrrepo", "pmrtqs"]
-default-members = ["pmrmodel_base", "pmrmodel", "pmrrepo", "pmrtqs"]
-
+members = [
+    "pmrapp_client",
+    "pmrapp_server",
+    "pmrctrl",
+    "pmrmodel_base",
+    "pmrmodel",
+    "pmrrepo",
+    "pmrtqs"
+]
+default-members = [
+    "pmrctrl",
+    "pmrmodel_base",
+    "pmrmodel",
+    "pmrrepo",
+    "pmrtqs",
+]
 
 [patch.crates-io]
 pmrapp_client = { path = "./pmrapp_client" }
 pmrapp_server = { path = "./pmrapp_server" }
+pmrctrl = { path = "./pmrctrl" }
 pmrmodel = { path = "./pmrmodel" }
 pmrmodel_base = { path = "./pmrmodel_base" }
 pmrrepo = { path = "./pmrrepo" }
