Refactor of Workspace* structs
- Removed the `Record` designation to remove noise
- Unified all Workspace* structs under `pmrmodel_base::workspace`.
- Added some basic tests for the Workspace and Exposure types.
- Workspace struct now match more closely to the defined schema.

--- a/pmrmodel/Cargo.toml
+++ b/pmrmodel/Cargo.toml
@@ -20,5 +20,6 @@ sqlx = { version = "0.7.0", features = [ "runtime-async-std-native-tls", "sqlite
 thiserror = "1.0"
 
 [dev-dependencies]
+anyhow = "1.0.0"
 mockall = "0.10.2"
 tempfile = "3.1.0"
