--- a/pmrmodel_base/Cargo.toml
+++ b/pmrmodel_base/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4"
-enum_primitive = "*"
+num_enum = "0.6.1"
 serde = { version = "1.0.59", features = ["serde_derive"] }
 serde_json = "1.0.59"
 sqlx = { version = "0.7.0", features = [], optional = true }
