--- a/pmrmodel_base/Cargo.toml
+++ b/pmrmodel_base/Cargo.toml
@@ -12,6 +12,7 @@ num_enum = "0.6.1"
 serde = { version = "1.0.59", features = ["serde_derive"] }
 serde_json = "1.0.59"
 sqlx = { version = "0.7.0", features = [], optional = true }
+thiserror = "1.0"
 
 [features]
 sqlx = ["dep:sqlx"]
