--- a/pmrmodel_base/Cargo.toml
+++ b/pmrmodel_base/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1.50"
 chrono = { version = "0.4", optional = true }
+log = { version = "0.4" }
 num_enum = "0.6.1"
 serde = { version = "1.0.59", features = ["serde_derive"] }
 serde_json = "1.0.59"
