--- a/pmrrepo/Cargo.toml
+++ b/pmrrepo/Cargo.toml
@@ -16,7 +16,7 @@ gix = "^0.48"
 log = { version = "0.4", features = ["std", "serde"] }
 mime_guess = "2.0.4"
 paw = "1.0"
-pmrmodel_base = { version = "0.1", features = ["sqlx"] }
+pmrmodel_base = { version = "0.1", features = ["sqlx", "git"] }
 pmrmodel = "0.1"
 serde = "1.0.59"
 serde_json = "1.0.59"
