Major refactor/restructure of git related usage
- Given the split of git/repo in the base model, and the goal of
  unifying the pmrapp JSON compatible structures (i.e. the fully owned
  version of the handle/result types), the pmrmodel_base module now
  has the git feature, where its git module will be included which will
  contain a couple additional structs that "patch" in the missing fields
  for reference fields along with the conversion of various gix structs
  into the fully owned repo structs.
- With the introduction of the owned repo structs, pmrapp dropped all
  declaration and usage of the previous wrapper structs.
- However, this change effectively "broke" a number of features that
  worked previously in pmrapp, but this is moot as the migration to
  leptos is being planned and the effort to make a working web interface
  will be better spent building that new app.
- As the pmrapp fully migrated to the new usage (albeit with the above
  caveat), the previous pmrrepo::git and related modules fully dropped.

--- a/pmrmodel_base/Cargo.toml
+++ b/pmrmodel_base/Cargo.toml
@@ -10,14 +10,15 @@ async-trait = "0.1.50"
 chrono = { version = "0.4", optional = true }
 gix = { version = "^0.48", optional = true }
 log = { version = "0.4" }
+mime_guess = { version = "2.0.4", optional = true }
 num_enum = "0.6.1"
 serde = { version = "1.0.59", features = ["serde_derive"] }
 serde_json = "1.0.59"
-sqlx = { version = "0.7.0", features = [], optional = true }
+sqlx = { version = "0.7.0", features = ["sqlite"], optional = true }
 thiserror = "1.0"
 
 [features]
-git = ["dep:gix"]
+git = ["dep:gix", "dep:mime_guess"]
 display = ["dep:chrono"]
 sqlx = ["dep:sqlx"]
 
