--- a/pmrapp_client/Cargo.toml
+++ b/pmrapp_client/Cargo.toml
@@ -11,7 +11,7 @@ console_log = { version ="0.2", features = ["color"], optional = true }
 console_error_panic_hook = { version = "0.1", optional = true}
 derive_more = "0.99.16"
 log = "0.4"
-pmrmodel_base = "0.1.0"
+pmrcore = "0.1.0"
 reqwest = { version = "0.11", features = ["json"] }
 sauron = "0.51.0"
 serde = { version = "1.0", features = ["serde_derive"]}
