--- a/pmrmodel/Cargo.toml
+++ b/pmrmodel/Cargo.toml
@@ -13,7 +13,7 @@ chrono = "0.4.26"
 futures = "0.3"
 log = { version = "0.4", features = ["std", "serde"] }
 parking_lot = "0.12"
-pmrmodel_base = { version = "0.1", features = ["sqlx", "display"] }
+pmrcore = { version = "0.1", features = ["sqlx", "display"] }
 serde = "1.0.59"
 serde_json = "1.0.59"
 sqlx = { version = "0.7.0", features = [ "runtime-async-std-native-tls", "sqlite" ] }
