--- a/pmrtqs/Cargo.toml
+++ b/pmrtqs/Cargo.toml
@@ -14,8 +14,9 @@ clap = { version = "4.2", features = [ "derive", "env" ] }
 dotenvy = "0.15.0"
 futures = "0.3"
 log = { version = "0.4", features = ["std", "serde"] }
-pmrmodel_base = { version = "0.1", features = ["sqlx", "display"] }
-pmrmodel = "0.1"
+pmrcore = { version = "0.1", features = ["sqlx", "display"] }
+pmrmodel = "0.1.0"
+pmrrepo = "0.1.0"
 serde = "1.0.59"
 serde_json = "1.0.59"
 sqlx = { version = "0.7.0", features = ["sqlite"] }
