--- a/pmrctrl/Cargo.toml
+++ b/pmrctrl/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-pmrrepo = "0.1"
-pmrtqs = "0.1"
+log = { version = "0.4", features = ["std", "serde"] }
+pmrcore = "0.1.0"
+pmrmodel = "0.1.0"
+pmrrepo = "0.1.0"
+pmrtqs = "0.1.0"
 
 [dev-dependencies]
 tempfile = "3.1.0"
