--- a/pmrctrl/Cargo.toml
+++ b/pmrctrl/Cargo.toml
@@ -13,4 +13,7 @@ serde = { version = "1.0.59", features = ["serde_derive"] }
 thiserror = "1.0"
 
 [dev-dependencies]
+anyhow = "1.0.0"
+async-std = { version = "1.5.0", features = [ "attributes" ] }
 tempfile = "3.1.0"
+test-pmr = { path = "../testing" }
