--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -10,6 +10,8 @@ git2 = "0.13"
 gix = "^0.48"
 mockall = "0.10.2"
 pmrcore = "0.1.0"
+pmrctrl = "0.1.0"
+pmrmodel = "0.1.0"
 pmrrepo = "0.1.0"
 tempfile = "3.1.0"
 textwrap-macros = "0.3.0"
