Additional trait bounds on various handles
- Trying to make this more usable in async contexts
- While it would be great if those Ctrl types can also provide the trait
  like the Ref types, this is complicated by the fact that the gix repo
  handles don't have the correct thread-safe types in place, so we just
  expose the inner public now to make this easier.

--- a/pmrctrl/Cargo.toml
+++ b/pmrctrl/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-trait = "0.1.50"
 log = { version = "0.4", features = ["std", "serde"] }
 pmrcore = "0.1.0"
 pmrmodel = "0.1.0"
