--- a/pmrctrl/Cargo.toml
+++ b/pmrctrl/Cargo.toml
@@ -16,5 +16,6 @@ thiserror = "1.0"
 [dev-dependencies]
 anyhow = "1.0.0"
 async-std = { version = "1.5.0", features = [ "attributes" ] }
+serde_json = "1.0.59"
 tempfile = "3.1.0"
 test-pmr = { path = "../testing" }
