--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
-async-std = "1.5.0"
 async-trait = "0.1.50"
 git2 = "0.13"
 gix = "^0.48"
@@ -16,3 +15,6 @@ pmrmodel = "0.1.0"
 pmrrepo = "0.1.0"
 tempfile = "3.1.0"
 textwrap-macros = "0.3.0"
+
+[dev-dependencies]
+async-std = "1.5.0"
