--- a/pmrctrl/Cargo.toml
+++ b/pmrctrl/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.50"
+futures = "0.3"
 log = { version = "0.4", features = ["std", "serde"] }
 pmrcore = "0.1.0"
 pmrmodel = "0.1.0"
