Test handling/reporting of arg validation errors
- Rather than reporting just the first error, collect each and every one
  of them and report them as such.

--- a/pmrmodel/Cargo.toml
+++ b/pmrmodel/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 async-trait = "0.1.50"
 chrono = "0.4.26"
 futures = "0.3"
+itertools = "0.11"
 log = { version = "0.4", features = ["std", "serde"] }
 parking_lot = "0.12"
 pmrcore = { version = "0.1", features = ["sqlx", "display"] }
