ExposureFileViewRef update helper functions
- Relies on the helper function provided by the underlying platform.
- Introduced features for the testing package to help with limiting the
  set of pulled dependencies for the package being tested (i.e. pmrcore
  shouldn't need to pull in the rest of the things beyond core).

--- a/pmrctrl/Cargo.toml
+++ b/pmrctrl/Cargo.toml
@@ -19,4 +19,4 @@ anyhow = "1.0.0"
 async-std = { version = "1.5.0", features = [ "attributes" ] }
 serde_json = "1.0.59"
 tempfile = "3.1.0"
-test-pmr = { path = "../testing" }
+test-pmr = { path = "../testing", features = ["platform"] }
