--- a/pmrcore/Cargo.toml
+++ b/pmrcore/Cargo.toml
@@ -17,6 +17,12 @@ serde_json = "1.0.59"
 sqlx = { version = "0.7.0", features = ["sqlite"], optional = true }
 thiserror = "1.0"
 
+[dev-dependencies]
+anyhow = "1.0.0"
+async-std = { version = "1.5.0", features = [ "attributes" ] }
+mockall = "0.10.2"
+test-pmr = { path = "../testing" }
+
 [features]
 git = ["dep:gix", "dep:mime_guess"]
 display = ["dep:chrono"]
