--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -10,11 +10,16 @@ git2 = "0.13"
 gix = "^0.48"
 mockall = "0.10.2"
 pmrcore = "0.1.0"
-pmrctrl = "0.1.0"
-pmrmodel = "0.1.0"
-pmrrepo = "0.1.0"
+pmrctrl = { version = "0.1.0", optional = true }
+pmrmodel = { version = "0.1.0", optional = true }
+pmrrepo = { version = "0.1.0", optional = true }
 tempfile = "3.1.0"
 textwrap-macros = "0.3.0"
 
 [dev-dependencies]
 async-std = "1.5.0"
+
+[features]
+model = ["dep:pmrmodel"]
+repo = ["dep:pmrrepo"]
+platform = ["model", "repo", "dep:pmrctrl"]
