Conversion of a Task to Command
- Of both std::process and tokio flavors, including basic test along
  with a sentinel binary to show they both work.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,5 +25,5 @@ jobs:
         cargo build --bin pmrapp_server --package pmrapp_server
     - name: Run tests
       run: |
-        cargo test
+        cargo test --all-features
         cargo test --package pmrapp_server --package pmrapp_client
