--- a/pmrctrl/Cargo.toml
+++ b/pmrctrl/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 async-trait = "0.1.50"
 futures = "0.3"
 log = { version = "0.4", features = ["std", "serde"] }
+parking_lot = "0.12"
 pmrcore = "0.1.0"
 pmrmodel = "0.1.0"
 pmrrepo = "0.1.0"
