Adding a pmrctrl binary
- Changing PMR_GIT_ROOT to PMR_REPO_ROOT for the environment variable
- Adding the relevant varibles and structure for the binary that will
  make use of the platform.
- Unfortunately, there is a major issue with lifetime with the platform
  type that will need work to fix...

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 export HTTP_PORT=9380
-export PMR_GIT_ROOT=./repos
+export PMR_REPO_ROOT=./repo
+export PMR_DATA_ROOT=./data
 export PMRTQS_DB_URL=sqlite:pmrtqs.db
 export PMRAPP_DB_URL=sqlite:pmrapp.db
 export SQLX_OFFLINE=true
