--- a/pmrctrl/Cargo.toml
+++ b/pmrctrl/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0"
+async-std = { version = "1.5.0", features = [ "attributes" ] }
 async-trait = "0.1.50"
+clap = { version = "4.2", features = [ "derive", "env" ] }
+dotenvy = "0.15.0"
 futures = "0.3"
 log = { version = "0.4", features = ["std", "serde"] }
 parking_lot = "0.12"
@@ -13,6 +17,8 @@ pmrmodel = "0.1.0"
 pmrrepo = "0.1.0"
 pmrtqs = "0.1.0"
 serde = { version = "1.0.59", features = ["serde_derive"] }
+sqlx = { version = "0.7.0", features = ["sqlite"] }
+stderrlog = "0.5.1"
 thiserror = "1.0"
 
 [dev-dependencies]
