--- a/pmrcore/Cargo.toml
+++ b/pmrcore/Cargo.toml
@@ -15,7 +15,7 @@ num_enum = "0.6.1"
 serde = { version = "1.0.59", features = ["serde_derive"] }
 serde_json = "1.0.59"
 sqlx = { version = "0.7.0", features = ["sqlite"], optional = true }
-tokio = { version = "1.35", features = ["process", "rt", "macros"], optional = true }
+tokio = { version = "1.35", features = ["macros", "process"], optional = true }
 thiserror = "1.0"
 
 [dev-dependencies]
