--- a/pmrtqs/Cargo.toml
+++ b/pmrtqs/Cargo.toml
@@ -21,8 +21,9 @@ serde = "1.0.59"
 serde_json = "1.0.59"
 sqlx = { version = "0.7.0", features = ["sqlite"] }
 stderrlog = "0.5.1"
-tokio = { version = "1.35", features = [ "rt-multi-thread", "sync", "time" ] }
+tokio = { version = "1.35", features = [ "rt-multi-thread", "signal", "sync", "time" ] }
 tokio-stream = "0.1.5"
+tokio-util = { version = "0.7.11", features = [ "rt" ] }
 thiserror = "1.0"
 
 [dev-dependencies]
