Made the executor and runner generic
- Provide a new Executor trait which will create the bounded TaskRefs
  with the stored backend/platform and execute them.
- Convert the original to be an implementation for TMPlatform and be
  an encapsulation as the underlying for the new trait implementation.
- Currently the implementation is still too coupled directly to the
  TMPlatform, will need to be loosen in order to be used for pmrctrl.

--- a/pmrtqs/Cargo.toml
+++ b/pmrtqs/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 async-std = { version = "1.5.0", features = [ "attributes" ] }
-async-recursion = "1.0.0"
+async-trait = "0.1.50"
 clap = { version = "4.2", features = [ "derive", "env" ] }
 dotenvy = "0.15.0"
 futures = "0.3"
