--- a/pmrctrl/Cargo.toml
+++ b/pmrctrl/Cargo.toml
@@ -21,6 +21,7 @@ serde_json = "1.0.59"
 sqlx = { version = "0.7.0", features = ["sqlite"] }
 stderrlog = "0.5.1"
 thiserror = "1.0"
+tokio = { version = "1.35", features = [ "sync" ] }
 
 [dev-dependencies]
 anyhow = "1.0.0"
