--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -21,6 +21,7 @@ pmrctrl = { version = "0.1.0", optional = true }
 pmrmodel = { version = "0.1.0", optional = true }
 pmrrepo = { version = "0.1.0", optional = true }
 pmrtqs = { version = "0.1.0", optional = true }
+serde = { version = "1", features = ["derive"] }
 sqlx = { version = "0.7.0", features = ["sqlite"], optional = true }
 tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
 tower = { version = "0.4", optional = true }
