--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -12,10 +12,10 @@ axum = { version = "=0.7.4", optional = true }
 clap = { version = "4.2", features = [ "derive", "env" ], optional = true }
 console_error_panic_hook = "0.1"
 dotenvy = { version = "0.15.0", optional = true }
-leptos = { version = "0.6" }
-leptos_axum = { version = "0.6", optional = true }
-leptos_meta = { version = "0.6" }
-leptos_router = { version = "0.6" }
+leptos = { version = "0.7.0-beta" }
+leptos_axum = { version = "0.7.0-beta", optional = true }
+leptos_meta = { version = "0.7.0-beta" }
+leptos_router = { version = "0.7.0-beta" }
 pmrcore = { version = "0.1.0" }
 pmrctrl = { version = "0.1.0", optional = true }
 pmrmodel = { version = "0.1.0", optional = true }
@@ -32,7 +32,7 @@ tracing = { version = "0.1", optional = true }
 http = "1"
 
 [features]
-hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
+hydrate = ["leptos/hydrate"]
 ssr = [
     "dep:anyhow",
     "dep:axum",
