--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 anyhow = { version = "1.0.0", optional = true }
-axum = { version = "=0.7.4", optional = true }
+axum = { version = "0.7", optional = true }
 clap = { version = "4.2", features = [ "derive", "env" ], optional = true }
 console_error_panic_hook = "0.1"
 dotenvy = { version = "0.15.0", optional = true }
