--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -12,7 +12,7 @@ axum = { version = "0.7", optional = true }
 clap = { version = "4.2", features = [ "derive", "env" ], optional = true }
 console_error_panic_hook = "0.1"
 dotenvy = { version = "0.15.0", optional = true }
-leptos = { version = "0.7.0-beta" }
+leptos = { version = "0.7.0-beta", features = [ "rkyv" ] }
 leptos_axum = { version = "0.7.0-beta", optional = true }
 leptos_meta = { version = "0.7.0-beta" }
 leptos_router = { version = "0.7.0-beta" }
