--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -12,6 +12,7 @@ axum = { version = "0.7", optional = true }
 clap = { version = "4.2", features = [ "derive", "env" ], optional = true }
 console_error_panic_hook = "0.1"
 dotenvy = { version = "0.15.0", optional = true }
+js-sys = { version = "0.3.69", optional = true }
 leptos = { version = "0.7.0-beta", features = [ "rkyv" ] }
 leptos_axum = { version = "0.7.0-beta", optional = true }
 leptos_meta = { version = "0.7.0-beta" }
@@ -27,12 +28,17 @@ tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
 tower = { version = "0.4", optional = true }
 tower-http = { version = "0.5", features = ["fs"], optional = true }
 wasm-bindgen = "=0.2.92"
+web-sys = { version = "0.3.69", features = [ "Document", "Event", "EventTarget", "Performance", "Window" ], optional = true }
 thiserror = "1"
 tracing = { version = "0.1", optional = true }
 http = "1"
 
 [features]
-hydrate = ["leptos/hydrate"]
+hydrate = [
+    "leptos/hydrate",
+    "dep:js-sys",
+    "dep:web-sys",
+]
 ssr = [
     "dep:anyhow",
     "dep:axum",
