--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -13,10 +13,10 @@ clap = { version = "4.2", features = [ "derive", "env" ], optional = true }
 console_error_panic_hook = "0.1"
 dotenvy = { version = "0.15.0", optional = true }
 js-sys = { version = "0.3.69", optional = true }
-leptos = { version = "0.7.0-beta", features = [ "rkyv" ] }
-leptos_axum = { version = "0.7.0-beta", optional = true }
-leptos_meta = { version = "0.7.0-beta" }
-leptos_router = { version = "0.7.0-beta" }
+leptos = { version = "0.7.0-beta2", features = [ "rkyv" ] }
+leptos_axum = { version = "0.7.0-beta2", optional = true }
+leptos_meta = { version = "0.7.0-beta2" }
+leptos_router = { version = "0.7.0-beta2" }
 pmrcore = { version = "0.1.0" }
 pmrctrl = { version = "0.1.0", optional = true }
 pmrmodel = { version = "0.1.0", optional = true }
@@ -27,7 +27,7 @@ sqlx = { version = "0.7.0", features = ["sqlite"], optional = true }
 tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
 tower = { version = "0.4", optional = true }
 tower-http = { version = "0.5", features = ["fs"], optional = true }
-wasm-bindgen = "=0.2.92"
+wasm-bindgen = "=0.2.93"
 web-sys = { version = "0.3.69", features = [ "Document", "Event", "EventTarget", "Performance", "Window" ], optional = true }
 thiserror = "1"
 tracing = { version = "0.1", optional = true }
