--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -12,6 +12,8 @@ axum = { version = "0.7", optional = true }
 clap = { version = "4.2", features = [ "derive", "env" ], optional = true }
 console_error_panic_hook = "0.1"
 dotenvy = { version = "0.15.0", optional = true }
+gloo-utils = "0.2.0"
+html-escape = "0.2.13"
 js-sys = { version = "0.3.69", optional = true }
 leptos = { version = "0.7.0-beta2", features = [ "rkyv" ] }
 leptos_axum = { version = "0.7.0-beta2", optional = true }
