--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+ammonia = { version = "4", optional = true }
 anyhow = { version = "1.0.0", optional = true }
 axum = { version = "0.7", optional = true }
 clap = { version = "4.2", features = [ "derive", "env" ], optional = true }
@@ -42,6 +43,7 @@ hydrate = [
     "dep:web-sys",
 ]
 ssr = [
+    "dep:ammonia",
     "dep:anyhow",
     "dep:axum",
     "dep:clap",
