Proof of concept ACL/RBAC for pmrplatform
- Implemented using Casbin, seems to be able to provide a rough access
  control in some form of role based access control.
- The dependency and effort to get it to build is not straightforward as
  it doesn't use sqlx in an optimum way - as it tries to offer multiple
  platform in the same crate except this use case is currently not
  possible in sqlx, leading to annoying compilation issues.  I may have
  to fork this to get sqlite to build in a straightforward manner if
  this isn't easily resolvable.
- Though a better option for this is to provide a generic authentication
  trait that a more simplistic authorization scheme can be provided.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "pmrctrl",
     "pmrcore",
     "pmrmodel",
+    "pmrrbac",
     "pmrrepo",
     "pmrtqs",
     "testing",
@@ -23,6 +24,7 @@ pmrapp = { path = "./pmrapp" }
 pmrctrl = { path = "./pmrctrl" }
 pmrmodel = { path = "./pmrmodel" }
 pmrcore = { path = "./pmrcore" }
+pmrrbac = { path = "./pmrrbac" }
 pmrrepo = { path = "./pmrrepo" }
 pmrtqs = { path = "./pmrtqs" }
 
