--- a/pmrrbac/Cargo.toml
+++ b/pmrrbac/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 [dependencies]
 log = { version = "0.4" }
-sqlx-adapter = { version = "1.2.0", default-features = false, features = ["sqlite", "runtime-tokio-native-tls"]}
+casbin = { version = "2.5.0" }
+pmrcore = { version = "0.1", features = ["display"] }
 thiserror = "1.0"
-tokio = { version = "1.35", features = ["fs", "io-util", "macros"] }
+tokio = { version = "1.35", features = ["fs", "io-util", "macros", "rt"] }
 
 [dev-dependencies]
 anyhow = "1.0.0"
