Rough integration of pmrac with pmrrbac
- Policy line now use the Role enum rather than String,
- Provide a set_resource_policy method for PmrRbac so that the whole
  `ResourcePolicy` may be set in one go.

--- a/pmrrbac/Cargo.toml
+++ b/pmrrbac/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1.35", features = ["fs", "io-util", "macros", "rt"] }
 
 [dev-dependencies]
 anyhow = "1.0.0"
+serde_json = "1.0.59"
 
 [features]
 
