--- a/pmrac/Cargo.toml
+++ b/pmrac/Cargo.toml
@@ -16,6 +16,7 @@ tokio = { version = "1.35", features = [ "fs", "io-util", "macros", "rt" ] }
 [dev-dependencies]
 anyhow = "1.0.0"
 async-std = { version = "1.5.0", features = [ "attributes" ] }
+serde_json = "1.0.59"
 test-pmr = { path = "../testing", features = [ "ac" ] }
 
 [features]
