Integrate the pmrrbac enforcer into pmrac
- This finally identified some holes that was thought to exist with how
  the policies are generated where there should be way to conditionally
  enable a role given a state.

--- a/pmrac/Cargo.toml
+++ b/pmrac/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 argon2 = { version = "0.5.3", features = [ "std" ] }
 casbin = { version = "2.5.0" }
 log = { version = "0.4" }
+pmrrbac = { version = "0.0.1" }
 pmrcore = { version = "0.0.1", features = [ "display" ] }
 thiserror = "1.0"
 tokio = { version = "1.35", features = [ "fs", "io-util", "macros", "rt" ] }
