The start of the pmrac utility.
- For user management, to start, and some point perhaps session
  management once that part is figured out.

--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
-export HTTP_PORT=9380
+# Leptos configuration for production version of pmrapp
+export LEPTOS_SITE_ADDR="127.0.0.1:9380"
+export LEPTOS_SITE_ROOT="site"
+
+export PMRAC_DB_URL=sqlite:pmrac.db
+export PMRAPP_DB_URL=sqlite:pmrapp.db
+export PMRTQS_DB_URL=sqlite:pmrtqs.db
+
 export PMR_REPO_ROOT=./repo
 export PMR_DATA_ROOT=./data
-export PMRTQS_DB_URL=sqlite:pmrtqs.db
-export PMRAPP_DB_URL=sqlite:pmrapp.db
+
 export SQLX_OFFLINE=true
