--- a/pmrac/Cargo.toml
+++ b/pmrac/Cargo.toml
@@ -6,11 +6,17 @@ authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
 edition = "2021"
 
 [dependencies]
+anyhow = { version = "1.0", optional = true }
 argon2 = { version = "0.5.3", features = [ "std" ] }
 casbin = { version = "2.5.0" }
+clap = { version = "4.2", features = [ "derive", "env" ], optional = true }
+dotenvy = { version = "0.15.0", optional = true }
 log = { version = "0.4" }
-pmrrbac = { version = "0.0.1" }
 pmrcore = { version = "0.0.1", features = [ "display" ] }
+pmrmodel = { version = "0.0.1", optional = true }
+pmrrbac = { version = "0.0.1" }
+sqlx = { version = "0.8.0", features = ["sqlite"], optional = true }
+stderrlog = { version = "0.5.1", optional = true }
 thiserror = "1.0"
 tokio = { version = "1.35", features = [ "fs", "io-util", "macros", "rt" ] }
 
@@ -21,5 +27,18 @@ serde_json = "1.0.59"
 test-pmr = { path = "../testing", features = [ "ac" ] }
 
 [features]
+bin = [
+    "anyhow",
+    "clap",
+    "dotenvy",
+    "pmrmodel",
+    "sqlx",
+    "stderrlog",
+]
 
 [lib]
+
+[[bin]]
+name = "pmrac"
+path = "src/bin/pmrac.rs"
+required-features = ["bin"]
