--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -16,10 +16,10 @@ dotenvy = { version = "0.15.0", optional = true }
 gloo-utils = "0.2.0"
 html-escape = "0.2.13"
 js-sys = { version = "0.3.69", optional = true }
-leptos = { version = "0.7.0-beta7", features = [ "rkyv" ] }
-leptos_axum = { version = "0.7.0-beta7", optional = true }
-leptos_meta = { version = "0.7.0-beta7" }
-leptos_router = { version = "0.7.0-beta7" }
+leptos = { version = "0.7.0-gamma", features = [ "rkyv" ] }
+leptos_axum = { version = "0.7.0-gamma", optional = true }
+leptos_meta = { version = "0.7.0-gamma" }
+leptos_router = { version = "0.7.0-gamma" }
 pmrcore = { version = "0.0.1" }
 pmrctrl = { version = "0.0.1", optional = true }
 pmrmodel = { version = "0.0.1", optional = true }
