Way to enable additional flags on tokio for tests

--- a/pmrcore/Cargo.toml
+++ b/pmrcore/Cargo.toml
@@ -33,5 +33,6 @@ git = ["dep:gix", "dep:mime_guess"]
 display = ["dep:chrono"]
 sqlx = ["dep:sqlx"]
 tokio = ["dep:tokio"]
+testing = ["tokio/rt"]
 
 [lib]
