Bring the testing chrono::Utc to test package
- Also attempted to unify the source of the chrono package, but the lack
  of support for test-only features in cargo make this somewhat annoying
  so leaving it at per-package level.
- While at it, allow the fake Utc to deref to the real thing for methods
  that have not been overriden.

--- a/pmrcore/Cargo.toml
+++ b/pmrcore/Cargo.toml
@@ -31,7 +31,8 @@ test-pmr = { path = "../testing" }
 [features]
 clap = ["dep:clap"]
 git = ["dep:gix", "dep:mime_guess"]
-display = ["dep:chrono"]
+chrono = ["dep:chrono", "test-pmr/chrono"]
+display = ["chrono"]
 # group all server-only dependencies to this feature.
 server = ["dep:rand"]
 sqlx = ["dep:sqlx"]
