--- a/pmrmodel/Cargo.toml
+++ b/pmrmodel/Cargo.toml
@@ -24,3 +24,4 @@ anyhow = "1.0.0"
 async-std = { version = "1.5.0", features = [ "attributes" ] }
 mockall = "0.10.2"
 tempfile = "3.1.0"
+test-pmr = { path = "../testing", features = ["chrono"] }
