Integrate the SessionBackend into ACPlatform.
- Implement the sqlite backend to match.
- Also adjusted some of the feature names to be more sensible.
- The origin for the session is now required.

--- a/pmrcore/Cargo.toml
+++ b/pmrcore/Cargo.toml
@@ -34,7 +34,8 @@ git = ["dep:gix", "dep:mime_guess"]
 chrono = ["dep:chrono", "test-pmr/chrono"]
 display = ["chrono"]
 # group all server-only dependencies to this feature.
-server = ["dep:rand"]
+server = ["session"]
+session = ["dep:rand"]
 sqlx = ["dep:sqlx"]
 tokio = ["dep:tokio"]
 testing = ["tokio/rt"]
