Go all in on the factory pattern for sessions
- Might as well extend that to allow the override of the time source...
- Has the nice attribute where the default `SessionFactory` will provide
  the function that has everything needed to work correctly, instead of
  needing to pass that into `Session::new`.

--- a/pmrcore/Cargo.toml
+++ b/pmrcore/Cargo.toml
@@ -34,7 +34,7 @@ git = ["dep:gix", "dep:mime_guess"]
 chrono = ["dep:chrono", "test-pmr/chrono"]
 display = ["chrono"]
 # group all server-only dependencies to this feature.
-server = ["session"]
+server = ["session", "chrono"]
 session = ["dep:rand"]
 sqlx = ["dep:sqlx"]
 tokio = ["dep:tokio"]
