--- a/pmrac/Cargo.toml
+++ b/pmrac/Cargo.toml
@@ -12,9 +12,9 @@ casbin = { version = "2.5.0" }
 clap = { version = "4.2", features = [ "derive", "env" ], optional = true }
 dotenvy = { version = "0.15.0", optional = true }
 log = { version = "0.4" }
-pmrcore = { version = "0.0.1", features = [ "display" ] }
-pmrmodel = { version = "0.0.1", optional = true }
-pmrrbac = { version = "0.0.1" }
+pmrcore = { workspace = true, features = [ "display" ] }
+pmrmodel = { workspace = true, optional = true }
+pmrrbac = { workspace = true }
 sqlx = { version = "0.8.0", features = ["sqlite"], optional = true }
 stderrlog = { version = "0.5.1", optional = true }
 thiserror = "1.0"
