--- a/pmrrbac/Cargo.toml
+++ b/pmrrbac/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 log = { version = "0.4" }
 casbin = { version = "2.5.0" }
-pmrcore = { version = "0.0.1", features = ["display"] }
+pmrcore = { workspace = true, features = ["display"] }
 thiserror = "1.0"
 tokio = { version = "1.35", features = ["fs", "io-util", "macros", "rt"] }
 
