--- a/pmrtqs/Cargo.toml
+++ b/pmrtqs/Cargo.toml
@@ -14,9 +14,9 @@ clap = { version = "4.2", features = [ "derive", "env" ] }
 dotenvy = "0.15.0"
 futures = "0.3"
 log = { version = "0.4", features = ["std", "serde"] }
-pmrcore = { version = "0.0.1", features = ["sqlx", "display"] }
-pmrmodel = "0.0.1"
-pmrrepo = "0.0.1"
+pmrcore = { workspace = true, features = ["sqlx", "display"] }
+pmrmodel = { workspace = true }
+pmrrepo = { workspace = true }
 serde = "1.0.59"
 serde_json = "1.0.59"
 sqlx = { version = "0.8.0", features = ["sqlite"] }
