--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -10,11 +10,11 @@ chrono = { version = "0.4", optional = true }
 git2 = "0.13"
 gix = "^0.58"
 mockall = "0.10.2"
-pmrac = { version = "0.0.1", optional = true }
-pmrcore = "0.0.1"
-pmrctrl = { version = "0.0.1", optional = true }
-pmrmodel = { version = "0.0.1", optional = true }
-pmrrepo = { version = "0.0.1", optional = true }
+pmrac = { workspace = true, optional = true }
+pmrcore = { workspace = true }
+pmrctrl = { workspace = true, optional = true }
+pmrmodel = { workspace = true, optional = true }
+pmrrepo = { workspace = true, optional = true }
 rand = { version = "0.8.5", optional = true }
 tempfile = "3.1.0"
 textwrap-macros = "0.3.0"
