--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,55 @@ pmrrbac = { path = "./pmrrbac", version = "0.0.1" }
 pmrrepo = { path = "./pmrrepo", version = "0.0.1" }
 pmrtqs = { path = "./pmrtqs", version = "0.0.1" }
 
+ammonia = "4"
+anyhow = "1.0.0"
+argon2 = "0.5.3"
+async-recursion = "1.0.0"
+async-std = "1.5.0"
+async-trait = "0.1.50"
+axum = "0.7"
+casbin = "2.5.0"
+chrono = "0.4.31"
+clap = "4.2"
+console_error_panic_hook = "0.1"
+dotenvy = "0.15.0"
+futures = "0.3"
+git2 = "0.13"
+gix = "0.58"
+gloo-utils = "0.2.0"
+html-escape = "0.2.13"
+http = "1"
+itertools = "0.11"
+js-sys = "0.3.69"
+leptos = "0.7.0-gamma2"
+leptos_axum = "0.7.0-gamma2"
+leptos_meta = "0.7.0-gamma2"
+leptos_router = "0.7.0-gamma2"
+log = "0.4"
+mime_guess = "2.0.4"
+mockall = "0.10.2"
+num_enum = "0.6.1"
+parking_lot = "0.12"
+paw = "1.0"
+rand = "0.8.5"
+serde = "1.0.59"
+serde_json = "1.0.59"
+sqlx = "0.8.0"
+stderrlog = "0.5.1"
+structopt = "0.3"
+tempfile = "3.1.0"
+test-binary = "3.0.2"
+textwrap-macros = "0.3.0"
+thiserror = "1.0"
+tokio = "1.35"
+tokio-stream = "0.1.5"
+tokio-util = "0.7.11"
+tower = "0.4"
+tower-http = "0.5"
+tracing = "0.1"
+wasm-bindgen = "=0.2.93"
+web-sys = "0.3.69"
+
 # Defines a size-optimized profile for the WASM bundle in release mode
 [profile.wasm-release]
 inherits = "release"
