--- a/pmrac/Cargo.toml
+++ b/pmrac/Cargo.toml
@@ -6,24 +6,24 @@ authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
 edition = "2021"
 
 [dependencies]
-anyhow = { version = "1.0", optional = true }
-argon2 = { version = "0.5.3", features = [ "std" ] }
-casbin = { version = "2.5.0" }
-clap = { version = "4.2", features = [ "derive", "env" ], optional = true }
-dotenvy = { version = "0.15.0", optional = true }
-log = { version = "0.4" }
+anyhow = { workspace = true, optional = true }
+argon2 = { workspace = true, features = ["std"] }
+casbin = { workspace = true }
+clap = { workspace = true, features = ["derive", "env"], optional = true }
+dotenvy = { workspace = true, optional = true }
+log = { workspace = true }
 pmrcore = { workspace = true, features = [ "display" ] }
 pmrmodel = { workspace = true, optional = true }
 pmrrbac = { workspace = true }
-sqlx = { version = "0.8.0", features = ["sqlite"], optional = true }
-stderrlog = { version = "0.5.1", optional = true }
-thiserror = "1.0"
-tokio = { version = "1.35", features = [ "fs", "io-util", "macros", "rt" ] }
+sqlx = { workspace = true, features = ["sqlite"], optional = true }
+stderrlog = { workspace = true, optional = true }
+thiserror = { workspace = true }
+tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
 
 [dev-dependencies]
-anyhow = "1.0.0"
-async-std = { version = "1.5.0", features = [ "attributes" ] }
-serde_json = "1.0.59"
+anyhow = { workspace = true }
+async-std = { workspace = true, features = ["attributes"] }
+serde_json = { workspace = true }
 test-pmr = { path = "../testing", features = [ "ac" ] }
 
 [features]
