--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -7,34 +7,34 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-ammonia = { version = "4", optional = true }
-anyhow = { version = "1.0.0", optional = true }
-axum = { version = "0.7", optional = true }
-clap = { version = "4.2", features = [ "derive", "env" ], optional = true }
-console_error_panic_hook = "0.1"
-dotenvy = { version = "0.15.0", optional = true }
-gloo-utils = "0.2.0"
-html-escape = "0.2.13"
-js-sys = { version = "0.3.69", optional = true }
-leptos = { version = "0.7.0-gamma2", features = [ "rkyv" ] }
-leptos_axum = { version = "0.7.0-gamma2", optional = true }
-leptos_meta = { version = "0.7.0-gamma2" }
-leptos_router = { version = "0.7.0-gamma2" }
+ammonia = { workspace = true, optional = true }
+anyhow = { workspace = true, optional = true }
+axum = { workspace = true, optional = true }
+clap = { workspace = true, features = ["derive", "env"], optional = true }
+console_error_panic_hook = { workspace = true }
+dotenvy = { workspace = true, optional = true }
+gloo-utils = { workspace = true }
+html-escape = { workspace = true }
+js-sys = { workspace = true, optional = true }
+leptos = { workspace = true, features = ["rkyv"] }
+leptos_axum = { workspace = true, optional = true }
+leptos_meta = { workspace = true }
+leptos_router = { workspace = true }
 pmrcore = { workspace = true }
 pmrctrl = { workspace = true, optional = true }
 pmrmodel = { workspace = true, optional = true }
 pmrrepo = { workspace = true, optional = true }
 pmrtqs = { workspace = true, optional = true }
-serde = { version = "1", features = ["derive"] }
-sqlx = { version = "0.8.0", features = ["sqlite"], optional = true }
-tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
-tower = { version = "0.4", optional = true }
-tower-http = { version = "0.5", features = ["fs"], optional = true }
-wasm-bindgen = "=0.2.93"
-web-sys = { version = "0.3.69", features = [ "Document", "Event", "EventTarget", "Performance", "Window" ], optional = true }
-thiserror = "1"
-tracing = { version = "0.1", optional = true }
-http = "1"
+serde = { workspace = true, features = ["derive"] }
+sqlx = { workspace = true, features = ["sqlite"], optional = true }
+tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
+tower = { workspace = true, optional = true }
+tower-http = { workspace = true, features = ["fs"], optional = true }
+wasm-bindgen = { workspace = true }
+web-sys = { workspace = true, features = ["Document", "Event", "EventTarget", "Performance", "Window"], optional = true }
+thiserror = { workspace = true }
+tracing = { workspace = true, optional = true }
+http = { workspace = true }
 
 [features]
 hydrate = [
