--- a/pmrctrl/Cargo.toml
+++ b/pmrctrl/Cargo.toml
@@ -4,28 +4,28 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0"
-async-std = { version = "1.5.0", features = [ "attributes" ] }
-async-trait = "0.1.50"
-clap = { version = "4.2", features = [ "derive", "env" ] }
-dotenvy = "0.15.0"
-futures = "0.3"
-log = { version = "0.4", features = ["std", "serde"] }
-parking_lot = "0.12"
+anyhow = { workspace = true }
+async-std = { workspace = true, features = ["attributes"] }
+async-trait = { workspace = true }
+clap = { workspace = true, features = ["derive", "env"] }
+dotenvy = { workspace = true }
+futures = { workspace = true }
+log = { workspace = true, features = ["std", "serde"] }
+parking_lot = { workspace = true }
 pmrcore = { workspace = true }
 pmrmodel = { workspace = true }
 pmrrepo = { workspace = true }
 pmrtqs = { workspace = true }
-serde = { version = "1.0.59", features = ["serde_derive"] }
-serde_json = "1.0.59"
-sqlx = { version = "0.8.0", features = ["sqlite"] }
-stderrlog = "0.5.1"
-thiserror = "1.0"
-tokio = { version = "1.35", features = [ "sync" ] }
+serde = { workspace = true, features = ["serde_derive"] }
+serde_json = { workspace = true }
+sqlx = { workspace = true, features = ["sqlite"] }
+stderrlog = { workspace = true }
+thiserror = { workspace = true }
+tokio = { workspace = true, features = ["sync"] }
 
 [dev-dependencies]
-anyhow = "1.0.0"
-async-std = { version = "1.5.0", features = [ "attributes" ] }
-tempfile = "3.1.0"
-test-binary = "3.0.2"
+anyhow = { workspace = true }
+async-std = { workspace = true, features = ["attributes"] }
+tempfile = { workspace = true }
+test-binary = { workspace = true }
 test-pmr = { path = "../testing", features = ["platform"] }
