--- a/pmrrepo/Cargo.toml
+++ b/pmrrepo/Cargo.toml
@@ -6,27 +6,27 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0"
-async-std = { version = "1.5.0", features = [ "attributes" ] }
-async-recursion = "1.0.0"
-dotenvy = "0.15"
-futures = "0.3"
-git2 = "0.13"
-gix = "^0.58"
-log = { version = "0.4", features = ["std", "serde"] }
-paw = "1.0"
+anyhow = { workspace = true }
+async-std = { workspace = true, features = ["attributes"] }
+async-recursion = { workspace = true }
+dotenvy = { workspace = true }
+futures = { workspace = true }
+git2 = { workspace = true }
+gix = { workspace = true }
+log = { workspace = true, features = ["std", "serde"] }
+paw = { workspace = true }
 pmrcore = { workspace = true, features = ["sqlx", "git"] }
 pmrmodel = { workspace = true }
-serde = "1.0.59"
-serde_json = "1.0.59"
-sqlx = { version = "0.8.0", features = ["sqlite"] }
-stderrlog = "0.5.1"
-structopt = { version = "0.3", features = ["paw"] }
-thiserror = "1.0"
+serde = { workspace = true }
+serde_json = { workspace = true }
+sqlx = { workspace = true, features = ["sqlite"] }
+stderrlog = { workspace = true }
+structopt = { workspace = true, features = ["paw"] }
+thiserror = { workspace = true }
 
 [dev-dependencies]
-async-trait = "0.1.50"
-mockall = "0.10.2"
-tempfile = "3.1.0"
-textwrap-macros = "0.3.0"
+async-trait = { workspace = true }
+mockall = { workspace = true }
+tempfile = { workspace = true }
+textwrap-macros = { workspace = true }
 test-pmr = { path = "../testing", features = ["repo"] }
