--- a/pmrapp/Cargo.toml
+++ b/pmrapp/Cargo.toml
@@ -20,6 +20,7 @@ leptos = { workspace = true, features = ["rkyv"] }
 leptos_axum = { workspace = true, optional = true }
 leptos_meta = { workspace = true }
 leptos_router = { workspace = true }
+pmrac = { workspace = true, optional = true }
 pmrcore = { workspace = true }
 pmrctrl = { workspace = true, optional = true }
 pmrmodel = { workspace = true, optional = true }
@@ -48,6 +49,7 @@ ssr = [
     "dep:axum",
     "dep:clap",
     "dep:dotenvy",
+    "dep:pmrac",
     "dep:pmrctrl",
     "dep:pmrmodel",
     "dep:pmrrepo",
