--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,8 @@ async-recursion = "1.0.0"
 async-std = "1.5.0"
 async-trait = "0.1.50"
 axum = "0.7"
+axum-login = "0.16.0"
+bytemuck = "1.19.0"
 casbin = "2.5.0"
 chrono = "0.4.31"
 clap = "4.2"
