--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,11 +74,13 @@ tempfile = "3.1.0"
 test-binary = "3.0.2"
 textwrap-macros = "0.3.0"
 thiserror = "1.0"
+time = "0.3.36"
 tokio = "1.35"
 tokio-stream = "0.1.5"
 tokio-util = "0.7.11"
 tower = "0.4"
 tower-http = "0.5"
+tower-sessions = "0.13.0"
 tracing = "0.1"
 wasm-bindgen = "=0.2.93"
 web-sys = "0.3.69"
